[package]
name = "buildernet-orderflow-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# alloy
alloy-primitives = { version = "1.3.1", features = ["serde"] }
alloy-rlp = "0.3.12"
alloy-consensus = { version = "1.0.32", features = ["k256", "serde"] }
alloy-eips = "1.0.32"
alloy-signer = "1.0.32"
alloy-signer-local = "1.0.32"

# revm
revm-primitives = { version = "20.2.1", default-features = false }
revm-interpreter = { version = "25.0.2", default-features = false }

# rbuilder
rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "3f14f82" }

# rt
tokio = { version = "1", default-features = false, features = [
  "sync",
  "time",
  "rt-multi-thread",
  "macros"
] }
tokio-util = { version = "0.7.16" }
futures = { version = "0.3" }
futures-util = { version = "0.3.31" }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2.5"

# metrics
metrics = "0.24"
metrics-derive = "0.1"
metrics-process = "2.4.0"
metrics-util = "0.20.0"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = [
  "http-listener"
] }

# indexing
arrow = { version = "56.2.0" }
parquet = { version = "56.2.0" }
clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
  "inserter",
  "time",
  "uuid",
  "native-tls"
] }
clickhouse-derive = { version = "0.2.0" }
time = { version = "0.3.44" }

# misc
auto_impl = "1.3.0"
dyn-clone = "1.0.20"
hyper = "1.7"
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "tokio",
  "tracing"
] }
wyhash = "0.6.0"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = { version = "0.11.19" }
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
dashmap = "6"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
reqwest = { version = "0.12", features = ["json"] }
strum = "0.27"
strum_macros = "0.27"
mini-moka = "0.10.3"
rand = "0.9.2"

# Manually override cc version (conflict between alloy-consensus and rbuilder)
cc = "=1.2.15"

[dev-dependencies]
tempfile = { version = "3.23.0" }
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
  "inserter",
  "time",
  "test-util",
  "uuid"
] }
derive_more = { version = "2.0.1" }
alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
criterion = "0.7"

[[bench]]
name = "validation"
harness = false

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "release"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# Common linting rules
[lints]
rust.missing_debug_implementations = "warn"
# rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
