[package]
name = "flowproxy"
version = "3.0.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
# alloy
alloy-primitives = { version = "1.4.1", features = ["serde", "rand"] }
alloy-rlp = "0.3.12"
alloy-hardforks = "0.4.4"
alloy-consensus = { version = "1.0.41", features = ["k256", "serde"] }
alloy-eips = "1.0.41"
alloy-signer = "1.0.41"
alloy-signer-local = "1.0.41"

# revm
revm-primitives = { version = "21.0.2", default-features = false }
revm-interpreter = { version = "29.0.1", default-features = false }

# rbuilder
rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", tag = "v1.3.1" }
rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", tag = "v1.3.1", features = [
  "test-utils"
] }


# rt
tokio = { version = "1", default-features = false, features = [
  "sync",
  "time",
  "rt-multi-thread",
  "macros"
] }
futures = { version = "0.3" }

# allocator
tikv-jemallocator = { version = "0.6", optional = true }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# metrics
prometric = { version = "0.2.1", features = ["process"] }
prometric-derive = { version = "0.2.1" }
prometheus = "0.14.0"

# indexing
arrow = { version = "56.2.0" }
parquet = { version = "56.2.0" }
clickhouse = { version = "0.14.0", features = [
  "inserter",
  "time",
  "uuid",
  "native-tls"
] }
time = { version = "0.3.44" }

# misc
dotenvy = "0.15.7"
hyper = { version = "1.7", features = ["http1", "http2"] }
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "tokio",
  "tracing",
  "macros"
] }
wyhash = "0.6.0"
mime = "0.3"
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
dashmap = "6"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
reqwest = { version = "0.12", features = ["json", "http2", "native-tls-alpn"] }
strum = "0.27"
strum_macros = "0.27"
mini-moka = "0.10.3"
rand = "0.9.2"
derive_more = { version = "2", features = ["deref", "from", "into"] }
fdlimit = "0.3.0"
rayon = "1.11.0"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = { version = "0.6.7", features = ["serde"] }

# networking
msg-transport = { git = "https://github.com/chainbound/msg-rs", branch = "lore/feat/transport-control", features = [
  "tcp-tls"
] }
msg-socket = { git = "https://github.com/chainbound/msg-rs", branch = "lore/feat/transport-control" }
openssl = { version = "0.10.75" }

[dev-dependencies]
tempfile = { version = "3.23.0" }
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
clickhouse = { version = "0.14.0", features = [
  "inserter",
  "time",
  "test-util",
  "uuid"
] }
derive_more = { version = "2.0.1" }
alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
criterion = "0.7"
tokio = { version = "1", default-features = false, features = [
  "sync",
  "time",
  "rt-multi-thread",
  "macros",
  "test-util"
] }

[[bench]]
name = "validation"
harness = false

[features]
default = ["jemalloc"]
# Enable jemalloc as the global allocator
jemalloc = ["dep:tikv-jemallocator"]
# Enable jemalloc with unprefixed malloc (recommended for reproducible builds)
jemalloc-unprefixed = [
  "jemalloc",
  "tikv-jemallocator/unprefixed_malloc_on_supported_platforms"
]

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.reproducible]
inherits = "release"
panic = "abort"
incremental = false

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "release"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# Common linting rules
[lints]
rust.missing_debug_implementations = "warn"
# rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[package.metadata.cargo-shear]
ignored = ["strum"]
